--- a/style.css
+++ b/style.css
@@ -85,7 +85,21 @@ li.dropdown {
     background-color: rgba(255, 255, 255, 0.2)
 }
 
-.content > iframe {
-    margin: 0 auto;
-    text-align: center;
-}
+.content > .iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9 */
+    padding-left: 10%;
+    padding-right: 10%;
+    position: relative;
+    margin: 0 10%;
+  } 
+  
+  .iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 0;
+    width: 100%;
+    height: 100%;
+  }
+
