--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ li.dropdown {
     width: fill-available;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    overflow:scroll;
 }
 
 .dropdown-content a {
