--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ li.dropdown {
     text-align: center;
     color: white;
     margin: 10px;
+    padding: 10px;
     border-radius: 6px;
     background-color: rgba(255, 255, 255, 0.2)
 }
