--- a/style.css
+++ b/style.css
@@ -30,6 +30,16 @@ body {
     background-color: #392f3c;
 }
 
+a {
+    color: rgb(156, 0, 156);
+    text-decoration: none;
+}
+
+a:hover {
+    color: #2b6687;
+    text-decoration: underline;
+}
+
 ul {
     display: flex;
     justify-content: space-between;
@@ -58,6 +68,7 @@ li a:hover,
 .dropdown:hover .dropbtn {
     background-color: magenta;
     color: white;
+    text-decoration: none;
 }
 
 li.dropdown {
@@ -104,7 +115,7 @@ li.dropdown {
     text-align: center;
     color: white;
     margin: 10px;
-    padding: 10px;
+    padding: 16px;
     border-radius: 6px;
     background-color: rgba(255, 255, 255, 0.2)
 }
@@ -200,3 +211,4 @@ li.dropdown {
     margin: 0 auto;
     width: 180px;
 }
+
